# python-cli-tool-scaffold

./: .editorconfig  .gitignore  .mergify.yml  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  pyproject.toml  scaffold.sh
.github/: dependabot.yml  pull_request_template.md  renovate.json
.github/workflows/: main.yml  publish.yml
python_cli_tool_scaffold/: __init__.py  app.py
tests/: test_app.py  test_python_cli_tool_scaffold.py
