[tool.poetry]
name = "python-cli-tool-scaffold"
version = "0.0.1"
description = "An awesome description"
authors = ["Your name <your@email.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/<repo-owner>/python-cli-tool-scaffold"
repository = "https://github.com/<repo-owner>/python-cli-tool-scaffold"
include = ["LICENSE.md"]
classifiers = ["Environment :: Console", "Operating System :: OS Independent"]

[tool.poetry.dependencies]
python = "^3.11"
pretty-errors = "1.2.25"
vulture = "2.14"
click = "8.2.1"

[tool.poetry.dev-dependencies]
ruff = "0.12.5"
bandit = "1.8.6"
pytest = "8.4.1"

[tool.poetry.scripts]
python-cli-tool-scaffold = "python_cli_tool_scaffold:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
ignore = ["E203", "E501", "E231", "E722"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
